fixing spacing issues

--- a/journal/styles.css
+++ b/journal/styles.css
@@ -175,9 +175,9 @@ time {
     margin-left: 135px;
 }
 
-.post5time {
+/* .post5time {
     margin-left: 145px;
-}
+} */
 
 /* main content of page */
 article p {
@@ -209,7 +209,7 @@ footer {
     padding: 50px;
 }
 
-#gamedesign {
+/* #gamedesign {
     margin-left: 120px;
     margin-right: 120px;
-}
+} */
